# giaic-hackathon-II

./: CLAUDE.md
.specify/memory/: constitution.md
history/prompts/constitution/: 1-ai-native-todo-constitution-update.constitution.prompt.md
history/prompts/todo-app/: 1-in-memory-python-console-todo.implement.prompt.md  1-in-memory-python-console-todo.plan.prompt.md  1-in-memory-python-console-todo.spec.prompt.md  1-in-memory-python-console-todo.tasks.prompt.md
phase-1/: README.md  pyproject.toml
phase-1/src/todo_app/: exceptions.py
phase-1/src/todo_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
phase-1/src/todo_app/cli/: commands.py  main.py
phase-1/src/todo_app/models/: todo.py
phase-1/src/todo_app/repositories/: todo_repository.py
phase-1/src/todo_app/services/: todo_service.py
phase-1/tests/integration/: test_add_command.py  test_complete_command.py  test_delete_command.py  test_end_to_end.py  test_update_command.py  test_view_command.py
phase-1/tests/unit/: test_delete_functionality.py  test_mark_complete.py  test_todo_model.py  test_todo_service.py  test_update_functionality.py  test_view_functionality.py
specs/001-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-app/checklists/: requirements.md
specs/001-todo-app/contracts/: cli-commands.md
