[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-app"
version = "0.1.0"
description = "In-Memory Python Console Todo App (Phase I)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
todo-app = "todo_app.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]